--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </video>
       <script>
          function setTitle() {
-            document.title = "Rickroll"
+            document.title = "Sus"
          }
          window.onload = setTitle;
        </script>
