--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body>
-       <video autoplay loop width="100%">
+       <video autoplay loop width="100%" control=False>
 
     <source src="https://shattereddisk.github.io/rickroll/rickroll.mp4"
             type="video/mp4">
