--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?autoplay=1&controls=0" frameborder="0" allow="accelerometer; autoplay; modestbranding; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <script>
-         function setTitle() {
-            document.title = "Sus"
-         }
-         window.onload = setTitle;
-       </script>
+      <div id="theater">
+        <video id="video" src="http://upload.wikimedia.org/wikipedia/commons/7/79/Big_Buck_Bunny_small.ogv" controls="false"></video>
+        <canvas id="canvas"></canvas>
+        <label>
+          <br />Try to play me :)</label>
+        <br />
+      </div>
    </body>
 </html>
